Fixing some margin collapsing bugs

--- a/public/styles/components/_page.scss
+++ b/public/styles/components/_page.scss
@@ -8,5 +8,4 @@
  *    1.0.0 - 2018/05/05
  */
 .c-page {
-  background: white;
 }
