--- a/public/styles/elements/html.scss
+++ b/public/styles/elements/html.scss
@@ -6,4 +6,6 @@
  *    1.0.0 - 2018/05/03
  */
 html {
+  padding: 0;
+  margin: 0;
 }
