--- a/public/styles/objects/_navbar.scss
+++ b/public/styles/objects/_navbar.scss
@@ -21,9 +21,11 @@
   &__section {
     border: 1px solid blue;
 
-    .is-stuck {
+    &.is-stuck {
       position: fixed;
       width: 100%;
+      top: 0;
+      left: 0;
     }
   }
 
