--- a/public/styles/settings/colors.scss
+++ b/public/styles/settings/colors.scss
@@ -25,6 +25,6 @@ $s-color--link: #FC78DE;
 $s-color--link-hover: lighten($s-color--link, 10%);
 
 //Navbar Colors
-$s-color--navbar: rgba(0, 0, 0, 0.7);
+$s-color--navbar: rgba(0, 0, 0, 0.75);
 $s-color--navbar__text: white;
 $s-color--navbar__text-hover: #CCC;
